Updates to the /working_groups resource #167 (#204)
* Updates to the /working_groups resource #167


* remove org doc id for science


* Update the Working Group object structure in the API

* Fix imports, update openapi spec to reflect new WG structure

* Update documentation for Working Group service and related resources

* updated front end to work with new wg data

* Fix integrity of the list in the working group import object
